<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_email"
        android:key="display_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_email" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="online_update"
        android:summary="@string/pref_description_online_update"
        android:title="@string/pref_title_enable_online_update" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="elements_page"
        android:title="@string/pref_title_elements_page" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
</PreferenceScreen>