<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/type_of_visit_layout"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_of_visit"
            android:textAppearance="@style/alertTitleText"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_of_visit_radio_group">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:tag="@string/initial_visit_tag"
                android:checked="true"
                android:id="@+id/initial_visit"
                android:text="Initial Visit"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/follow_up_care_tag"
                android:text="Follow Up Care"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_of_child"
            android:textAppearance="@style/alertTitleText"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age_of_child_radio_group">
            <!--<RadioButton-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="4dp"-->
                <!--android:tag="@string/up_to_2_months_tag"-->
                <!--android:id="@+id/up_2_months"-->
                <!--android:checked="true"-->
                <!--android:text="Up to 2 Months"/>-->
            <!--<RadioButton-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:tag="@string/twomonthstag"-->
                <!--android:id="@+id/_2_months_5_years"-->
                <!--android:text="2 Months up to 5 Years"/>-->
        </RadioGroup>
    </LinearLayout>
</LinearLayout>